# llms-django-llamaindex

./: .gitignore  README.md  pyproject.toml
webproject/data/: Matriz de Achados - UFGD 1176800.xlsx  respostas-questionario.xlsx
webproject/llamaindex/: apps.py  controllers.py  urls.py  views.py
webproject/webproject/: settings.py  urls.py
